# awzod

./: Cargo.toml  README.md  cache.json  readme  readme.md
.github/workflows/: cargo.yml  release.yml  test.yml
src/: database.rs  input.rs  lib.rs  main.rs
src/readme/: footer.md  header.md  mod.rs
src/scheme/: category.rs  dialogue.rs  mod.rs  quotes.rs
