[package]
name = "awzod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asky = "0.1.1"
clap = { version = "4.4.7", features = ["derive"] }
colored = "2.0.4"
rand = "0.8.5"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
