[package]
name = "awzod"
version = "0.1.2"
edition = "2021"
homepage = "https://github.com/orzklv/awesome-shakhzod"
repository = "https://github.com/orzklv/awesome-shakhzod"
description = "Manager of Awesome Shakhzod"
authors = ["Sokhibjon Orzikulov <orzklv.uz>"]
keywords = ["awesome"]
readme = "readme.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asky = "0.1.1"
clap = { version = "4.4.7", features = ["derive"] }
colored = "2.0.4"
rand = "0.8.5"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
